// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render HeadingSecondary with empty string 1`] = `
<h2
  className="heading-secondary"
>
  
</h2>
`;

exports[`Render HeadingSecondary with text 1`] = `
<h2
  className="heading-secondary"
>
  test heading
</h2>
`;
